--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
 			<version>6.8.1</version>
+			<!-- <version>7.1.0</version> -->
 			<scope>test</scope>
 		</dependency>
 		<!--
@@ -106,6 +107,7 @@
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit-platform-engine</artifactId>
 			<version>6.8.1</version>
+			<!-- <version>7.1.0</version> -->
 		</dependency>
 		<!--
 		Library to access Spring Application Context and share
@@ -115,6 +117,7 @@
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-spring</artifactId>
 			<version>6.8.1</version>
+			<!-- <version>7.1.0</version> -->
 			<scope>test</scope>
 		</dependency>
 		<!--
@@ -146,6 +149,13 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 		</dependency>
+
+		<!-- <dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency> -->
 	</dependencies>
 
 	<build>
